<resources>
    <string name="app_name">2022 Preparation App</string>
    <string name="let_s_do_some_engineering">Let\'s do some engineering</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password_subtitle_text">Enter your registered email address and we\'ll send you a link for reset the password</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="label_email_address">Email Address</string>
    <string name="button_label_continue">Continue</string>
    <string name="invalid_email">Invalid email</string>
    <string name="create_your_account_to_start_your_free_trial">Create your account to start your free trial</string>
    <string name="password">Password</string>
    <string name="password_6_character">Password (6+ Character)</string>
    <string name="label_terms_of_services_amp_privacy_policy">By signing up I agree to application Terms of Services &amp; Privacy Policy></string>
    <string name="terms_of_services_span">Terms of Services</string>
    <string name="button_sign_up_label">Sign Up</string>
    <string name="or_sign_up_with_label">Or Sign up with</string>
    <string name="google">Google</string>
    <string name="already_have_account_sign_in">Already have account? Sign In</string>
    <string name="sign_in_span">Sign In</string>
    <string name="facebook">Facebook</string>
    <string name="invalid_pasword">Password should be at least 6 character long</string>
    <string name="forgot_password_que">Forgot Password?</string>
    <string name="button_sign_in_label">Sign In</string>
    <string name="or_sign_in_with_label">Or sign in with</string>
    <string name="do_not_have_account_sign_up">Don\'t have a account? Sign Up</string>
    <string name="sign_up_span">Sign Up</string>
    <string name="reset_your_password_que">Reset your password?</string>
    <string name="password_sent_message">Check in Your Mail !\nReset password link has been sent to your email-id. Please check your mail inbox</string>
</resources>